# esp32_camera

./: .gitignore  README.md  publish_public.sh
firmware/: CMakeLists.txt  README.md  partitions.csv  partitions_esp32cam.csv  partitions_esp32s3.csv  release.sh  sdkconfig.defaults  sdkconfig.defaults.esp32cam  sdkconfig.defaults.esp32s3
firmware/boards/: esp32cam.args  esp32s3.args
firmware/main/: CMakeLists.txt  Kconfig.projbuild  camera_init.c  device_id.c  device_id.h  http_sender.c  http_sender.h  idf_component.yml  main.c  ota.c  ota.h  pir.c  pir.h  wifi_connect.c  wifi_connect.h
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile.toml  cleanup.sh  docker-compose.yaml  entrypoint.sh
server/src/: dashboard.rs  db.rs  handlers.rs  main.rs  motion.rs  state.rs  telegram.rs
