[package]
name = "esp32-camera-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace", "catch-panic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
env_logger = "0.11"
log = "0.4"
fjall = "3"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }