idf_component_register(
    SRCS
        "main.c"
        "camera_init.c"
        "wifi_connect.c"
        "http_sender.c"
        "pir.c"
        "device_id.c"
    INCLUDE_DIRS "."
    REQUIRES
esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_http_client
        esp-tls
        mbedtls
        esp_driver_gpio
        esp_app_format
)
