idf_component_register(
    SRCS
        "main.c"
        "camera_init.c"
        "wifi_connect.c"
        "http_sender.c"
        "device_id.c"
        "ota.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_timer
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_http_client
        esp-tls
        mbedtls
        esp_driver_gpio
        esp_app_format
        app_update
        esp_https_ota
)
